--- a/20/Dockerfile
+++ b/20/Dockerfile
@@ -1,5 +1,5 @@
 ### latest ###
-FROM nethost/alpine:3.18 as latest
+FROM nethost/alpine:3.18 AS latest
 
 LABEL maintainer="hi@billgo.me"
 
@@ -114,7 +114,7 @@ CMD [ "node" ]
 
 ### builder ###
 
-FROM latest as builder
+FROM latest AS builder
 LABEL maintainer="hi@billgo.me"
 
 ENV PYTHONUNBUFFERED=1
