--- a/22/Dockerfile
+++ b/22/Dockerfile
@@ -1,5 +1,4 @@
-FROM alpine:3.20 as latest
-
+FROM alpine:3.20 AS latest
 LABEL maintainer="hi@billgo.me"
 
 RUN apk add -U bash nano tzdata && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && apk del tzdata
@@ -118,7 +117,7 @@ CMD [ "node" ]
 
 ### builder ###
 
-FROM latest as builder
+FROM latest AS builder
 LABEL maintainer="hi@billgo.me"
 
 RUN apk add --update --no-cache mongodb-tools make jq git && rm -rf /var/cache/apk/*
